--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,57 +1,57 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  font-family: 'Slabo 27px', serif;
-  background: #f5f5f5;
-  color: #4d4d4d;
-  margin: 0 auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  font-weight: 300;
+    font-family: 'Slabo 27px', serif;
+    background: #f5f5f5;
+    color: #4d4d4d;
+    margin: 0 auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-weight: 300;
 }
 
 input {
-  border-radius: 5px;
-  padding: 5px;
-  border: 1px solid rgba(0,0,0,0.3);
-  margin-right: 10px
+    border-radius: 5px;
+    padding: 5px;
+    border: 1px solid rgba(0,0,0,0.3);
+    margin-right: 10px
 }
 
 input::-webkit-input-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0,0,0,0.3);
+    font-style: italic;
+    font-weight: 300;
+    color: rgba(0,0,0,0.3);
 }
 
 input::-moz-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0,0,0,0.3);
+    font-style: italic;
+    font-weight: 300;
+    color: rgba(0,0,0,0.3);
 }
 
 input::input-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0,0,0,0.3);
+    font-style: italic;
+    font-weight: 300;
+    color: rgba(0,0,0,0.3);
 }
 
 h1 {
-  font-weight: 100;
-  font-size: 100px;
-  padding:0;
-  margin: 0;
+    font-weight: 100;
+    font-size: 100px;
+    padding:0;
+    margin: 0;
 }
 
 .main-wrapper {
-  width: 100%;
-  height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 .cards {
-  margin-top: 15px;
+    margin-top: 15px;
 }
